kubernetes/applications/apprise/apprise-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: apprise

# =====================================
# 1. PVC for Apprise Config (Longhorn)
# =====================================
