kubernetes/applications/apprise/apprise-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apprise-ingress
  namespace: apprise
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: apprise-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - apprise.example.com
      secretName: apprise-tls
  rules:
    - host: apprise.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apprise
                port:
                  number: 8000
